# x-net-email-css-inliner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  LICENSE  MANIFEST.in  README.md  package-lock.json  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint-python-package.yml  python-lint.yml  python-publish.yml
x_net_email_css_inliner/: __init__.py  inliner.py
x_net_email_css_inliner/tests/: test_inliner.py
x_net_email_css_inliner/tests/html/: example.css  example.html
