[metadata]
name = x-net-email-css-inliner
description = An Email CSS Inliner to inline a external CSS to HTML
license = MIT
url = https://github.com/x-net-services/x-net-email-css-inliner
author = X-Net Services GmbH
author_email = support-software@x-net.at

[flake8]
ignore = D100,D101,D104,E501

[check-manifest]
ignore-bad-ideas = *.mo

[bdist_wheel]
universal = 0
